Fixed whitespace

--- a/pages/about.css
+++ b/pages/about.css
@@ -1,6 +1,5 @@
 #info {
     text-align: center;
-    min-height: calc(100vh - 38rem)
 }
 
 .about__container {
